--- a/biblio/style.css
+++ b/biblio/style.css
@@ -22,6 +22,9 @@ body{
     margin: 0 auto;
 }
 
+a {
+    text-decoration: none;
+}
 /* header */
 
 .header-box {
@@ -76,6 +79,10 @@ body{
     border-radius: 244px;
     border: none;
 
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px;
+
     font-family: Montserrat Regular;
     font-size: 24px;
 
@@ -84,7 +91,43 @@ body{
     background-color: #C6BEA5;
 }
 
-/* main */
+footer {
+    background: #C6BEA5;
+
+    margin-top: 130px;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    font-family: Jura regular;
+
+    padding-top: 120px;
+    padding-bottom: 120px;
+
+    align-items: center;
+}
+
+.footer_main_text {
+    font-size: 47px;
+}
+
+.footer_main_text_description {
+    font-size: 31px;
+}
+
+.footer_main_contacts {
+    font-size: 25px;
+}
+
+.footer_main_bthome {
+    width: 50px;
+    height: 50px;
+}
+
+/*- - - - - - - - registration page - - - - - - - -*/
 
 main {
     font-family: Jura regular;
@@ -124,7 +167,7 @@ main {
     margin-top: 4%;
 }
 
-/* left part menu */
+/* left part form */
 
 .form-container-left {
     width: 35%;
@@ -155,6 +198,7 @@ main {
     width: 270px;
     height: 100px;
 }
+
 .input-file-btn {
 	position: relative;
 	display: inline-block;
@@ -211,7 +255,7 @@ main {
 
 
 
-/* right part menu */
+/* right part form */
 
 .form-container-right {
     display: flex;
@@ -282,7 +326,7 @@ a {
     font-weight: bold;
 }
 
-/* auth */
+/* - - - - - - - - auth page - - - - - - - -*/
 
 .form-container-middle {
     display: flex;
@@ -365,3 +409,251 @@ a {
     display: flex;
     justify-content: center;
 }
+
+/* - - - - - - - - index page - - - - - - - -*/
+
+/* our services */
+
+.main_title {
+    font-family: Jura regular;
+    font-size: 47px;
+
+    text-align: center;
+    margin-top: 8%;
+}
+
+.services_circles {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    margin-top: 4%;
+}
+
+.services_circle {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+}
+
+.services_circle_img {
+    width: 300px;
+    height: 300px;
+
+    border-radius: 244px;
+
+    background-color: antiquewhite;
+}
+
+.services_circle_text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.18em;
+
+    width: 250px;
+
+    margin-top: 5%;
+}
+
+/* top-10 */
+
+/* carousel */
+
+.wrapper .list_books {
+    white-space: nowrap;
+    overflow: hidden;
+
+    scroll-behavior: smooth;
+}
+
+.wrapper {
+    max-width: 1100px;
+    position: relative;
+
+    /* margin-left: 5%;
+    margin-right: 5%; */
+}
+
+.arrow {
+    height: 45px;
+    width: 20px;
+    cursor: pointer;
+    top: 39%;
+    transform: translateY(-50%);
+
+    position: absolute;
+}
+
+.left {
+    left: -25px;
+}
+
+.rigth {
+    right: -30px;
+}
+
+/* cards books  */
+
+.list_books {
+    display: flex;
+    flex-direction: row;
+
+    margin-top: 6%;
+    margin-left: 1.5%;
+}
+
+.list_book {
+    display: flex;
+    flex-direction: column;
+
+    text-align: left;
+
+    margin-right: 50px;
+}
+
+.list_books .list_book:last-child {
+    margin-right: 10px;
+}
+
+.list_book_img {
+    width: 230px;
+    height: 320px;
+
+    border-radius: 30px;
+}
+
+.list_book_name {
+    width: 215px;
+
+    margin-top: 5%;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.18em;
+
+    min-height: 38px;
+
+    /* ограничение строк */
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.list_book_author {
+    width: 215px;
+
+    margin-top: 6%;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.18em;
+
+    min-height: 19px;
+
+     /* ограничение строк */
+     display: -webkit-box;
+     -webkit-line-clamp: 1;
+     -webkit-box-orient: vertical;
+     overflow: hidden;
+}
+
+/* рейтинг */
+
+.list_book_estimation_rating {
+    width: 150px;
+
+    margin-top: 5%;
+}
+
+.list_book_estimation_rating span{
+    padding: 0;
+	font-size: 25px;
+	line-height: 1;
+	color: lightgrey;
+}
+
+.list_book_estimation_rating > span:before {
+	content: '★';
+}
+.list_book_estimation_rating > span.active {
+	color: gold;
+}
+
+/* heart */
+.list_book_estimation {
+    display: flex;
+    flex-direction: row;
+
+    position: relative;
+    justify-content: space-between;
+}
+
+.heart.fill-color{
+    background-color: #ff2727;
+
+    animation: popup .6s linear;
+    visibility: visible;
+}
+
+.heart.none-color{
+    background-color: #c9c9c9;
+}
+
+.heart {
+    position: relative;
+    height: 10px;
+    width: 10px;
+    background: #c9c9c9;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    border-radius: 0 0 0 2px;
+    transform: rotate(-45deg);
+    cursor: pointer;
+
+    margin-top: 21px;
+    margin-right: 15px;
+}
+    
+
+.heart::before{
+    position: absolute;
+    content: "";
+    top: -50%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    border-radius: 50%;
+}
+
+.heart:after{
+    position: absolute;
+    content: "";
+    right: -50%;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    border-radius: 50%;
+}
+
+@keyframes popup {
+    100% {
+        transform: scale(1.2) rotate(-45deg);
+        opacity: 0;
+    }
+}
+
+
+
+
