--- a/biblio/style.css
+++ b/biblio/style.css
@@ -464,7 +464,6 @@ a {
 /* carousel */
 
 .wrapper .list_books {
-    white-space: nowrap;
     overflow: hidden;
 
     scroll-behavior: smooth;
@@ -473,6 +472,7 @@ a {
 .wrapper {
     max-width: 1100px;
     position: relative;
+
 
     /* margin-left: 5%;
     margin-right: 5%; */
@@ -513,6 +513,8 @@ a {
     text-align: left;
 
     margin-right: 50px;
+
+    cursor: pointer;
 }
 
 .list_books .list_book:last-child {
@@ -527,7 +529,7 @@ a {
 }
 
 .list_book_name {
-    width: 215px;
+    max-width: 215px;
 
     margin-top: 5%;
 
@@ -544,6 +546,7 @@ a {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .list_book_author {
@@ -646,6 +649,98 @@ a {
     background: inherit;
     border-radius: 50%;
 }
+
+/*- - - - - - - - profile page - - - - - - - - */
+
+.profile_inf {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+
+    margin-top: 70px;
+}
+
+.profile_inf_ava {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 328px;
+    height: 328px;
+
+    border: 6px solid #C6BEA5;
+    border-radius: 244px;
+}
+
+.profile_inf_ava_photo {
+    width: 290px;
+    height: 290px;
+}
+
+.profile_inf_name {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 57px;
+
+    margin-top: 15px;
+}
+
+.profile_inf_bt_edit {
+    border-radius: 244px;
+    border: none;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 27px;
+    line-height: 33px;
+
+    font-family: Montserrat Regular;
+
+    padding: 1% 3%;
+
+    background-color: #C6BEA5;
+
+    margin-top: 25px;
+}
+
+.arrow_1 {
+    height: 45px;
+    width: 20px;
+    cursor: pointer;
+    top: 48%;
+    transform: translateY(-50%);
+
+    position: absolute;
+}
+
+.profile_bt_all {
+    display : inline-block;
+
+    border-radius: 244px;
+    border: none;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 25px;
+
+    font-family: Montserrat Regular;
+
+    padding: 1% 3%;
+
+    background-color: #C6BEA5;
+
+    margin-top: 20px;
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 @keyframes popup {
     100% {
