--- a/biblio/style.css
+++ b/biblio/style.css
@@ -30,7 +30,7 @@ a {
 .header-box {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 2% 0;
 }
@@ -514,6 +514,8 @@ a {
 
     margin-right: 50px;
 
+    width: 230px;
+
     cursor: pointer;
 }
 
@@ -539,7 +541,7 @@ a {
     line-height: 22px;
     letter-spacing: 0.18em;
 
-    min-height: 38px;
+    height: 40px;
 
     /* ограничение строк */
     display: -webkit-box;
@@ -940,7 +942,121 @@ a {
     font-weight: bold;
 }
 
+/*- - - - - - - - all collection page - - - - - - - - */
 
+.collections {
+    display: flex;
+    justify-content: center;
+
+    max-width: 1110px;
+
+    flex-wrap: wrap;
+}
+
+.list_collection {
+    display: flex;
+    flex-direction: column;
+
+    margin-right: 47px;
+
+    text-align: left;
+
+    width: 230px;
+    cursor: pointer;
+
+    margin-top: 50px;
+}
+
+.remove {
+    font-family: Montserrat Regular;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 0.18em;
+
+    background-color: #D4937F;
+
+    width: 160px;
+    height: 36px;
+    margin-top: 25px;
+
+    border: none;
+    border-radius: 100px;
+
+    margin-left: 30px;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+
+    margin-top: 30px;
+}
+
+/*- - - - - - - - collection page - - - - - - - - */
+
+.collection_description{
+    margin-top: 25px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+    letter-spacing: 0.18em;
+}
+
+.collections .list_book {
+    margin-right: 47px;
+    margin-top: 60px;
+}
+
+
+/*- - - - - - - - create collection page - - - - - - - - */
+
+textarea {
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 27px;
+    /* identical to box height */
+    letter-spacing: 0.18em;
+    color: black;
+
+    background-color: #D9D9D9;
+
+    border: none;
+    border-radius: 20px;
+    resize: none;
+
+    font-family: Jura regular;
+
+    padding-left: 10px;
+}
+
+.collection_create .form-edit .image-preview {
+    width: 230px;
+    height: 320px;
+
+    border-radius: 14px;
+
+    background-color: #D9D9D9;
+
+}
+.collection_create .form-edit {
+    min-height: 300px;
+}
+
+.collection_create .form-edit form {
+    height: 300px;
+}
+
+.collection_create .form-edit .form-container-right {
+    height: 250px;
+}
+
+textarea {
+    outline: none;
+ }
 
 @keyframes popup {
     100% {
